--- a/.github/workflows/scheduled-publish.yml
+++ b/.github/workflows/scheduled-publish.yml
@@ -1,10 +1,7 @@
 name: 定时发布文章
 on:
   schedule:
-    - cron: '58 23 * * *'   # 北京时间 07:58
-    - cron: '58 3 * * *'    # 北京时间 11:58
-    - cron: '58 11 * * *'   # 北京时间 19:58
-    - cron: '58 15 * * *'   # 北京时间 23:58
+    - cron: '*/15 * * * *'   # 北京时间 07:58
   workflow_dispatch:
 
 jobs:
