--- a/.github/workflows/scheduled-publish.yml
+++ b/.github/workflows/scheduled-publish.yml
@@ -1,4 +1,4 @@
-name: 定时发布文章
+name: scheduled-publish
 on:
   workflow_dispatch:
 
@@ -36,7 +36,7 @@ jobs:
 
           # 检查是否有更改需要提交
           if ! git diff --cached --quiet; then
-            git commit -m "chore: auto publish scheduled articles"
+            git commit -m "[AUTOBOT]Post scheduled articles"
 
             # 重新设置远程仓库 URL，使用 ACCESS_TOKEN 进行认证
             REPO_URL="https://x-access-token:${{ secrets.ACCESS_TOKEN }}@github.com/${{ github.repository }}.git"
